tests/NormalTests/paczka2/big_fuzzy/91823216.err
Error in line 12: sTz5vTZ S47 42,0
Error in line 8: 05eiIX A247 32,0
Error in line 25: PB6V6QL S47 70,1
Error in line 33: PB6V6QL S47 71,9
Error in line 31: 05eiIX A381 68,2
Error in line 34: PB6V6QL S580 46,0
Error in line 37: 05eiIX A247 18,6
Error in line 17: MdnNNGGZ S580 8,6
Error in line 46: zQmCzIxtyLd A38; 2;,8
Error in line 48: PB6V6QL S580 -1,5
Error in line 41: 05eiIX A381 35,5
Error in line 56: pbW4Q A247 78,7
Error in line 52: 05eiIX S580 0,6
Error in line 50: zQmCzIxtyLd A381 4,6
Error in line 59: 05eiIX S47 81,8
Error in line 51: S47 S580 120,8
Error in line 80: S47 S47 17,4
Error in line 85: PB6V6QL S580 166,56
Error in line 84: S47 S580 71,4
Error in line 91: pbW4Q A247 4,3
Error in line 104: 05eiIX S580 17,5
Error in line 125: MdnNNGGZ S47 61,3
Error in line 133: PB6V6QL S580 86,1
Error in line 124: zQmCzIxtyLd S47 85,7
Error in line 156: MdnNNGGZ A381 26,63
Error in line 159: zQmCzIxtyLd S580 51,3
Error in line 158: MdnNNGGZ A381 82,3
Error in line 145: sTz5vTZ S47 4,0
Error in line 168: pbW4Q A381 99,46
Error in line 166: MdnNNGGZ S47 60,3
Error in line 170: 05eiIX S580 47,7
Error in line 163: zQmCzIxtyLd A247 81,4
Error in line 164: pbW4Q A381 43,3
Error in line 176: PB6V6QL A247 1,1
Error in line 179: pbW4Q A247 63,2
Error in line 187: 05eiIX S47 64,2
Error in line 188: pbW4Q A381 27,4
Error in line 183: sTz5vTZ S580 19,0
Error in line 199: PB6V6QL A247 -2,9
Error in line 205: sTz5vTZ S580 64,8
Error in line 209: 05eiIX S580 578,5
Error in line 210: PB6V6QL S47 30,5
Error in line 226: PB6V6QL A3J1 222,J
Error in line 229: 05eiIX S47 91,6
Error in line 224: zQmCzIxtyLd S580 86,9
Error in line 242: MdnNNGGZ S580 68,7
Error in line 247: sTz5vTZ S580 4,6
